--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,53 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div >
+      <h2>Tree view on pure CSS</h2>
+
+      <ul class="tree">
+        <li>
+          <details >
+            <summary>First item</summary>
+            <ul>
+              <li>First item</li>
+              <li>
+                <details >
+                  <summary>
+                    Third level
+                  </summary>
+                  <ul>
+                    <li>First item</li>
+                    <li>Second item <a href="#aaaa">Test</a></li>
+                    <li>Another one</li>
+                  </ul>
+                </details>
+              </li>
+              <li>Another one</li>
+            </ul>
+          </details>
+        </li>
+        <li>
+          <details >
+            <summary>Second item</summary>
+            <ul>
+              <li>First item</li>
+              <li>
+                <details >
+                  <summary>Third level</summary>
+                  <ul>
+                    <li>First item</li>
+                    <li>Second item</li>
+                    <li>Another one</li>
+                  </ul>
+                </details>
+              </li>
+              <li>Another one</li>
+              <li>Another one</li>
+            </ul>
+          </details>
+        </li>
+        
+      </ul>
+    </div>
   </body>
 </html>
